--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ permalink:    /:year-:month-:day/:title
 paginate:     5
 
 plugins:
+  - jekyll-remote-theme
   - jekyll-paginate
   - jekyll-feed
   - jekyll-seo-tag
